Thu Apr 25 14:35:01 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_bn.c (ossl_bn_initialize): allow Fixnum and Bignum.
	  [ruby-core:53986] [Feature #8217]

Thu Apr 25 14:26:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI.decode_www_form): follow current URL Standard.
	  It gets encoding argument to specify the character encoding.
	  It now allows loose percent encoded strings, but denies ;-separator.
	  [ruby-core:53475] [Bug #8103]

	* lib/uri/common.rb (URI.decode_www_form): follow current URL Standard.
	  It gets encoding argument to convert before percent encode.
	  Now UTF-16 strings aren't converted to UTF-8 before percent encode
	  by default.

Wed Apr 25 14:26:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* benchmark/bm_hash_shift.rb: add benchmark for Hash#shift

	* hash.c (rb_hash_shift): use st_shift if hash is not being iterated to
	  delete element without iterating the whole hash.

	* hash.c (shift_i): remove function

	* include/ruby/st.h (st_shift): add st_shift function

	* st.c (st_shift): ditto

	[Bug #8312] [ruby-core:54524] Patch by funny-falcon

Thu Apr 25 12:03:38 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Extract C programs as toplevel constants.

Thu Apr 25 02:23:28 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_RM_RECURSIVE): this hack is needed by only
	  autoconf 2.69 or earlier on darwin.

Thu Apr 25 01:22:41 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tracer.rb (get_line): simply read by File.readlines.

	* lib/debug.rb (script_lines): get source lines from SCRIPT_LINES__ or
	  read from the file.

	* lib/debug.rb (display_list): use script_lines instead of recursion.
	  [Bug #8318]

	* lib/debug.rb (line_at): use script_lines same as display_list.

	* lib/debug.rb (display_list): Fix debug listing when called from the
	  same file it has been required.  patch by Dario Bertini <berdario AT
	  gmail.com> [Bug #8318] [fix GH-280]
